--- a/src/app/components/manuels/manuels.component.html
+++ b/src/app/components/manuels/manuels.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="addManuel()">
+<!-- <form (ngSubmit)="">
   <div class="form-group">
     <label for="titre">Titre</label>
     <input type="text" name="titre" class="form-control"[(ngModel)]="manuel.titre">
@@ -39,4 +39,4 @@
     </tr>
   </tbody>
 </table>
-
+ -->
