--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
   <app-sidebar></app-sidebar>
   <div class="flex-1 bg-gray-100">
     <app-topbar></app-topbar>
-    <app-municipalites></app-municipalites>
+    <!-- <app-municipalites></app-municipalites> -->
+    <!-- <app-manuels></app-manuels> -->
+    <!-- <app-evenements></app-evenements> -->
+    <app-galleries></app-galleries>
   </div>
 </div>
 <router-outlet></router-outlet>
